quote now has multiple authors dipslay

--- a/src/app/entity-types/literary-quote/entity-literary-quote/entity-literary-quote.component.html
+++ b/src/app/entity-types/literary-quote/entity-literary-quote/entity-literary-quote.component.html
@@ -8,8 +8,10 @@
   <ng-container *ngIf="foreignKeysEntitiesIdMap">
 
     <div class="author">
+      <ng-container *ngFor="let author of entity.author">
+        <span>{{foreignKeysEntitiesIdMap.authors[author].name}}</span>&nbsp;
+      </ng-container>
 
-      <span *ngIf="entity.author">{{foreignKeysEntitiesIdMap.authors[entity.author].name}}</span>
 
     </div>
 
